# icevault-python-client

./: .gitignore  README.md  build.sh  generate_sync.py  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_upload_file.py  02_restore_file.py  03_delete_archive.py  04_donwload_archive.py
src/icevault/: __init__.py  base_client.py  constants.py  enums.py  exceptions.py  types.py
src/icevault/_async/: client.py
src/icevault/_async/archives/: archives.py
src/icevault/_async/storage/: async_zip.py  s3.py  storage.py  sync_zip.py
src/icevault/archives/: endpoints.py  models.py
src/icevault/storage/: endpoints.py  models.py
tests/: conftest.py
