[project]
name = "icevault"
version = "0.1.2"
description = "Modern Python SDK for the IceVault REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "k.davydenko" },
]
requires-python = ">=3.11"
keywords = ["icevault", "api", "sdk", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "unasync (>=0.6.0,<0.7.0)",
    "pyzipper (>=0.4.0,<0.5.0)",
]

[project.urls]
Homepage = "https://github.com/your-org/ice-vault-python-client"
Documentation = "https://github.com/your-org/ice-vault-python-client#readme"
Repository = "https://github.com/your-org/ice-vault-python-client"
Issues = "https://github.com/your-org/ice-vault-python-client/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "icevault", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-cov = ">=6.0"
ruff = ">=0.9"
mypy = ">=1.14"
respx = ">=0.22"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["icevault"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: marks tests as integration tests (may require API credentials)",
]

[tool.coverage.run]
source = ["src/icevault"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
